# fastserver

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
app/: database.py  logger.py  main.py  security.py
secrets/: mysql_root_password.txt
